styling fixes- grid and placegolders on dashboard, removing white space on mobile

--- a/src/components/BarChart/BarChart.scss
+++ b/src/components/BarChart/BarChart.scss
@@ -2,32 +2,30 @@
 @use "../../assets/styles/mixins" as *;
 .bar-chart {
   position: relative;
-  border: 1px solid white;
-  border-radius: 25px;
-  height: 385px;
-  width: 404px;
+  height: 500px;
+  width: 600px;
+  display: grid;
   justify-items: center;
   align-content: center;
   font-family: "Inter", sans-serif;
   background-color: white;
   border-radius: 10px;
   @include mobile {
-    height: 360px;
+    display: unset;
+    height: 500px;
     width: 320px;
     margin-bottom: 10px;
   }
   &__chart-container {
-    height: 243px;
-    width: 300px;
+    height: 250px;
+    width: 520px;
     background-color: white;
-    margin: 50px;
     @include mobile {
-      margin: 0px;
       position: absolute;
+      top: 40px;
       left: 20px;
-      top: 60px;
-      height: 30vh;
-      width: 60vw;
+      height: 250px;
+      width: 250px;
     }
   }
   &__title {
