--- a/src/components/LargeLineGraph/LargeLineGraph.scss
+++ b/src/components/LargeLineGraph/LargeLineGraph.scss
@@ -1,10 +1,8 @@
 @use "../../assets/styles/mixins" as *;
 .network-devices {
   position: relative;
-  max-height: 400px;
-  max-width: 600px;
-  height: 40vh;
-  width: 60vw;
+  height: 500px;
+  width: 600px;
   display: grid;
   justify-items: center;
   align-content: center;
@@ -13,7 +11,7 @@
   border-radius: 10px;
   @include mobile {
     display: unset;
-    height: 360px;
+    height: 500px;
     width: 320px;
     margin-bottom: 10px;
   }
@@ -24,10 +22,10 @@
     background-color: white;
     @include mobile {
       position: absolute;
-      top: 80px;
-      left: 20px;
-      height: 30vh;
-      width: 60vw;
+      top: 60px;
+      left: 30px;
+      height: 230px;
+      width: 250px;
     }
   }
   &__title {
